# QuadriFlow

./: CMakeLists.txt
include/qflow/: flow.hpp  hierarchy.hpp  optimizer.hpp  parametrizer.hpp  post-solver.hpp  serialize.hpp  subdivide.hpp
src/: Optimizer.cu  adjacent-matrix.cpp  dedge.cpp  hierarchy.cpp  loader.cpp  localsat.cpp  main.cpp  merge-vertex.cpp  optimizer.cpp  parametrizer-flip.cpp  parametrizer-int.cpp  parametrizer-mesh.cpp  parametrizer-scale.cpp  parametrizer-sing.cpp  parametrizer.cpp  post-solver.cpp  subdivide.cpp
